<resources>
    <string name="app_name">EstateEase</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="image_contentDescription">image</string>
    <string name="lets_get_started_text">Let\'s get started</string>
    <string name="intro_text_description">View other people\'s property listings or create your own listings on EstateEase</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your Name, Email, and Password to register on our App</string>
    <string name="sign_in_description_text">Enter your Email and Password to sign in on our App</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="please_click_back_again_to_exit">Please Click Back Again to Exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="status">Status</string>
    <string name="my_profile_title">My Profile</string>

    <string name="FAB">Floating Action Button to add property</string>

    <string name="add_property_title">Add Property</string>
    <string name="create_meeting_title">Arrange Meeting</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="property_name">Name</string>
    <string name="property_description">Description</string>
    <string name="property_room">Rooms</string>
    <string name="property_address">Address</string>
    <string name="property_area">Area in M²</string>
    <string name="property_price">Price in Rupiah</string>
    <string name="add_property">Add Property</string>

    <string name="google_maps_api_key">AIzaSyDQjlnua1hHYK2EQpJL1cFFxlpnc22uwe8</string>

    <string name="no_properties_are_available">No Properties are available</string>
    <string name="open_in_maps">Open In Maps</string>
    <string name="owner_mobile">Owner Mobile Phone Number</string>
    <string name="owner_email">Owner Email</string>

    <string name="sell">Sell</string>
    <string name="rent">Rent</string>

    <string name="property_info">Property Info</string>
    <string name="edit_property">Edit Property</string>
    <string name="delete_property">Delete Property</string>
    <string name="update_property">Update Property</string>
    <string name="zoom_out">Zoom Out</string>

    <string name="meeting">Set Meeting</string>

</resources>